--- a/ProductByBarcode/Info.plist
+++ b/ProductByBarcode/Info.plist
@@ -39,5 +39,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Using For Capture Product</string>
 </dict>
 </plist>
